# code-cn-bridge

./: .gitignore  CLAUDE.md  CodeCNBridge.md  Dockerfile  README.md  config.yaml  example.env  pyproject.toml  requirements.txt
.github/workflows/: release.yml
code_cn_bridge/: __init__.py  admin_api.py  cli.py  client.py  config.py  middleware.py  models.py  protocol.py  server.py  stats.py
code_cn_bridge/adapters/: __init__.py  base.py  deepseek.py  doubao.py  glm.py  kimi.py  qwen.py
desktop/: electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
desktop/assets/: icon.icns
desktop/electron/: main.ts  preload.ts
desktop/src/: App.css  App.tsx  global.d.ts  i18n.ts  types.ts
desktop/src/components/: StatusBar.tsx
desktop/src/pages/: About.tsx  Dashboard.tsx  Logs.tsx  Models.tsx  Settings.tsx
desktop/src/services/: api.ts
docs/: USER_TUTORIAL.md
scripts/: build-all.bat  build-all.sh  build-backend.py
