[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-cn-bridge"
version = "0.1.0"
description = "本地代理工具，将 OpenAI Responses API 转换为 Chat Completions API，使 code CLI 无缝接入国产大模型"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "pydantic>=2.0",
    "watchfiles>=0.21.0",
]

[project.scripts]
code-cn-bridge = "code_cn_bridge.cli:main"

[tool.setuptools.packages.find]
include = ["code_cn_bridge*"]
